📚 docs(server): completed day-1

--- a/day-1/src/main/resources/application.yml
+++ b/day-1/src/main/resources/application.yml
@@ -17,3 +17,11 @@ spring:
   docker:
     compose:
       enabled: false
+  threads:
+    virtual:
+      enabled: true
+
+server:
+  tomcat:
+    threads:
+      max: 20
