--- a/pet-example/src/main/resources/application.properties
+++ b/pet-example/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=pet-example
 
+spring.batch.jdbc.initialize-schema=always
 spring.sql.init.mode=always
 
 spring.flyway.baseline-on-migrate=true
